<resources>
    <string name="app_name">HarcamalarABT</string>
    <string name="harcama_takip_uygulamasi">Harcama Takip Uygulaması</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="karsinizda_harcama_takip_uygulamasi">Karşınızda Harcama Takip Uygulaması</string>
    <string name="karisikliga_son">Artık Karışıklığa Son!</string>
    <string name="kolayca_kategorilendir">Kolayca Kategorilendir</string>
    <string name="second_screen_second_text">Harcamalarınızı kategorileyerek daha kolay takip edin!</string>
    <string name="farkli_para_birimleri">Farklı Para Birimleriyle Takip Et</string>
    <string name="harcamalar_text_third_fragment">Harcamalarınızı; TL, Dolar, Euro, Sterlin para birimleriyle ve sürekli güncellenen kurla takip edin!</string>
    <string name="next">GEÇ</string>
    <string name="bitir">BİTİR</string>
    <string name="merhaba">Merhaba</string>
    <string name="harcamaniz">Harcamanız</string>
    <string name="manat">Manat</string>
    <string name="dolar">Dolar</string>
    <string name="sterlin">STERLIN</string>
    <string name="sterlin2">Sterlin</string>
    <string name="tl">Tl</string>
    <string name="sample_money">9800 TL</string>
    <string name="sample_mehmet_bey">Mehmet Bey</string>
    <string name="sample_elektrik">Elektrik</string>
    <string name="sample_200_tl">200 TL</string>
    <string name="info_image">Info Image</string>
    <string name="add_new_item">Add New Item</string>
    <string name="ekle">Ekle</string>
    <string name="isminizi_giriniz">İsminizi Giriniz</string>
    <string name="erkek">Erkek</string>
    <string name="kadin">Kadın</string>
    <string name="belirtmek_istemiyorum">Belirtmek İstemiyorum</string>
    <string name="kaydet">Kaydet</string>
    <string name="isim_degistir">İsim Değiştir</string>
    <string name="harcama_ekle">Harcama Ekle</string>
    <string name="aciklama">Açıklama</string>
    <string name="harcama_tutari">Harcama Tutarı</string>
    <string name="fatura">Fatura</string>
    <string name="kira">Kira</string>
    <string name="diger">Diğer</string>
    <string name="sample_price">30 $</string>
    <string name="sil">Sil</string>
    <string name="euro">Euro</string>
</resources>